src/core/display.c
@@ -139,6 +139,7 @@ enum
 {
   OVERLAY_KEY,
   ACCELERATOR_ACTIVATED,
+  MODIFIERS_ACCELERATOR_ACTIVATED,
   FOCUS_WINDOW,
   WINDOW_CREATED,
   WINDOW_DEMANDS_ATTENTION,
@@ -254,6 +255,14 @@ meta_display_class_init (MetaDisplayClass *klass)
                   0,
                   NULL, NULL, NULL,
                   G_TYPE_NONE, 2, G_TYPE_UINT, G_TYPE_UINT);
+
+  display_signals[MODIFIERS_ACCELERATOR_ACTIVATED] =
+    g_signal_new ("modifiers-accelerator-activated",
+                  G_TYPE_FROM_CLASS (klass),
+                  G_SIGNAL_RUN_LAST,
+                  0,
+                  NULL, NULL, NULL,
+                  G_TYPE_NONE, 0);
 
   display_signals[WINDOW_CREATED] =
     g_signal_new ("window-created",
@@ -5679,6 +5688,12 @@ meta_display_accelerator_activate (MetaDisplay *display,
 {
   g_signal_emit (display, display_signals[ACCELERATOR_ACTIVATED],
                  0, action, deviceid);
+}
+
+void
+meta_display_modifiers_accelerator_activate (MetaDisplay *display)
+{
+  g_signal_emit (display, display_signals[MODIFIERS_ACCELERATOR_ACTIVATED], 0);
 }
 
 void
